--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -1,10 +1,7 @@
 ---
-title: Matching the Time of Emergence of Transboundary Fish Stocks to Lead Time for
-  Policy Response Under Climate Change
-author: 'Authors: Juliano Palacios-Abrantes*^1^, Thomas Frölicher^2^, U. Rashid Sumaila^1^,  Vicky Lam^1^, David VanderZwaag^3^, and William W.L. Cheung^1^'
-date: 'Affiliations: ^1^Institute for the Oceans and Fisheries, University of British
-  Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute,
-  University of Bern. ^3^Schulich School of Law, Dalhousie University'
+title: Matching the Time of Emergence of Transboundary Fish Stocks to Lead Time for Policy Response Under Climate Change
+author: 'Authors: Juliano Palacios-Abrantes*^1^, Thomas Frölicher^2^, Gabriel Reygondeau^13^, U. Rashid Sumaila^1^, Colette Wabnitz^14^, and William W.L. Cheung^1^'
+date: 'Affiliations: ^1^Institute for the Oceans and Fisheries, University of British Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute, University of Bern.'
 output:
   word_document: default
   pdf_document: default
@@ -67,6 +64,7 @@ We included in this analysis 633 marine exploited transboundary species represen
 We projected the distribution of marine species using a dynamic bioclimatic envelope model (hereafter called DBEM). The DBEM algorithm includes species physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences to sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. For pelagic species, the model uses environmental variables at the surface (e.g. sea surface temperature) whereas demersal species distribution are driven by ocean-bottom variables (e.g. bottom temperature). This way, the model estimates species abundance and maximum catch potential (a proxy of maximum sustainable yield) over a $0.5^{\circ}$ x $0.5^{\circ}$ grid of the world (See [-@Cheung:2010dt; -@Cheung:2016jd] for model details).
 
 We coupled the DBEM with the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project species distribution from 1951 to 2100 under climate change [@Dunne:2012bo; @Dunne:2013db]. We run the DBEM simulating biomass and MCP from 1950 to 2100 under a “worst-case” climate change scenario according to the Representative Concentration Pathway 8.5 (RCP 8.5) used by the Intergovernmental Panel on Climate Change (IPCC) [@IPCC:2014bz; Riahi:2011dk]. According to the GFDL-ESM2M, under the RCP 8.5 scenario atmospheric temperature will increase by $3.2^{\circ}C$ by 2081-2100, relative to preindustrial levels. Because the main approach of this paper relies on understanding the spatial and temporal variation of a species distribution, we have to understand both the historical as well as the future climate-driven distribution variability, in order to infer the differences. We do this by following an ensemble member approach where each member constitutes a different initial Earth system condition [@Rodggers:2015jq; @Frolicher:2009ge]. Thus, for our experiment, in each of the ten GFDL-ESM2M-ensembles the Earth system initial condition is infinitesimally different resulting in a unique atmosphere and ocean state at each point in time. This results in a different state of internal variability for each ensemble representing a plausible future under RCP 8.5 [@Rodggers:2015jq]. Following this approach allows us to estimate a secular trend for the natural variability (e.g. background noise). At the same time, by having multiple initial-condition ensemble simulations of the GFDL-ESM2M we were able to remove the natural variability of a stock's distribution by averaging the secular trend over all ensemble members (See Estimating the Time of Emergence). 
+
 ## Changes in Stocks Share Ratio
 
 We adopted the concept of threat point as the minimum proportion of the stocks’ joint distribution between neighboring EEZs that each country will accept if they were to cooperate in the management of the stock [@Palacios-Abrantes:E&S]. For each stock and time step (1951-2100) we first aggregate the number of $0.5^{\circ}$ x $0.5^{\circ}$ grid cells where the species was present within neighboring EEZs, and then calculated the proportion that each EEZ had [@FishForVisa]. We then average the results in three time periods in order to reduce climate variability within the projections. The first time period ($t_h$) comprises (1951 - 2005) and is assumed as the historic distribution of each species, thus representing each neighboring nation's threat point. This time frame matches the historic climate data that the GFDL uses to project climate change [@Dunne:2012bo; @Dunne:2013db]. We then selected two future periods; early $21^{st}$ century as the average of 2021 to 2040 ($t_e$), and mid $21^{st}$ century as the average of 2041 to 2060 ($t_m$). We choose these time periods to match the challenges of achieving fisheries-related UN-SDGs [@UnitedNations2018] such as SDG 14.4 (end overfishing) and SDG 1.2 (poverty reduction), aimed to be achieved by 2020 and 2030, respectively [@Singh:2017ds]. The analysis was replicated for each of the ten ensemble members capturing the variation by averaging results among ensemble members ($\mu \pm \sigma$). We then estimate the percentage change in the SSR ($\Delta{SSR}$) of each future time period ($SSR_{f}$) relative to the historic time period ($SSR_h$) as follows,
@@ -146,7 +144,7 @@ average_mid <- prop_r %>%
          )
 ```
 
-We estimated the change in SSR (larger than 1 s.d) of transboundary species shared by neighboring EEZs by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to present (1951-2005). Our results suggest that `r n_eez_per`% (n = `r n_eez`) of the world EEZs will see a change in SSR by 2030 (Fig. 1A). Most EEZs will average a change lower than 25% which is expected to slightly increase in intensity towards the  mid $21^{st}$ century (**Supplements Fig 1 (histogram)**). However, this result masks larger changes in SSR for specific species. For example, Guatemala's SSR of *Panulirus gracilis* shared with Mexico is projected to go from 12% to 26%. By early $21^{st}$ century, the percentage of transboundary stocks per EEZ that will see a change in SSR >< 1 s.d. of historical distribution will be relatively large (global mean of 69% of species in an EEZ). For 17 EEZs, 100% of their analyzed transboundary stocks will shift, while and only six EEZs will have less than 25% shifting stocks (Fig. 1A-Polygons). Regions where EEZs are relatively small and have multiple borders (e.g. The Caribbean) will see a complex dynamic of changes in SSR with no clear patterns (Fig. 1B). Towards the mid $21^{st}$ century, changes in SSR per EEZ will no be substantial (**Supplements Fig 1 (map)**) relative to the early $21^{st}$ century but are expected to increase in intensity (**Supplements Fig 1 (histogram)**).
+We estimated the change in SSR (larger than 1 s.d) of transboundary species shared by neighboring EEZs by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to present (1951-2005) under a high emission climate change scenario. Our results suggest that `r n_eez_per`% (n = `r n_eez`) of the world EEZs will see a change in SSR by 2030 (Fig. 1A). Most EEZs will average a change lower than 25% which is expected to slightly increase in intensity towards the  mid $21^{st}$ century (**Supplements Fig 1 (histogram)**). However, this result masks larger changes in SSR for specific species. For example, Guatemala's SSR of *Panulirus gracilis* shared with Mexico is projected to go from 12% to 26%. By early $21^{st}$ century, the percentage of transboundary stocks per EEZ that will see a change in SSR >< 1 s.d. of historical distribution will be relatively large (global mean of 69% of species in an EEZ). For 17 EEZs, 100% of their analyzed transboundary stocks will shift, while and only six EEZs will have less than 25% shifting stocks (Fig. 1A-Polygons). Regions where EEZs are relatively small and have multiple borders (e.g. The Caribbean) will see a complex dynamic of changes in SSR with no clear patterns (Fig. 1B). Towards the mid $21^{st}$ century, changes in SSR per EEZ will no be substantial (**Supplements Fig 1 (map)**) relative to the early $21^{st}$ century but are expected to increase in intensity (**Supplements Fig 1 (histogram)**).
 
 
 ```{r SSR_gain_map, eval = F,  echo = F, fig.width=9, fig.height=12, fig.cap =  "Average gain of transboundary stock share ratio (lines) and number of shifting stocks (polygon) by 2030 (2021-2040) relative to 1951-2005. Arrows go from the losing EEZ (point) to the winner (arrowhead). Pannel B zooms in to specific areas"}
@@ -182,7 +180,7 @@ grid.raster(img)
 
 ![Figure 3. Average time of emergence of transboundary stock. Land polygon represents  the current participation of emerging stocks in the country's fishing revenue. Exclusive Economic Zone polygon represents the average time of emergence across all stocks. Density plot on the right shows the latitudinal number of emerging stocks across EEZ centroids (10^o running mean).](../Figures/Fig3.png)
 
-Twelve of the 47 countries responsible for 75% of the yearly revenue generated from transbondary stocks between 2005 and 2010 will see an average ToE before 2030 (Fig. 4). This includes the United States who occupies the $4^{th}$ place. These 47 countries are also among those with the largest number of emerging taxa. Regionally speaking, most of African, Asian and European EEZs will see a latter ToE, while the Americas and Oceania will see an early ToE (Fig. 4). From the top ten countries with more revenue from transboundary species, nine of them share a border. Most of these countries (e.g.China) will also have a large number of emerging stocks, while others like Peru and Norway will have a small number of emerging taxa but representing high revenue fisheries.
+Twelve of the 47 countries responsible for 75% of the yearly revenue generated from transboundary stocks between 2005 and 2010 will see an average ToE before 2030 (Fig. 4). This includes the United States who occupies the $4^{th}$ place. These 47 countries are also among those with the largest number of emerging taxa. Regionally speaking, most of African, Asian and European EEZs will see a latter ToE, while the Americas and Oceania will see an early ToE (Fig. 4). From the top ten countries with more revenue from transboundary species, nine of them share a border. Most of these countries (e.g.China) will also have a large number of emerging stocks, while others like Peru and Norway will have a small number of emerging taxa but representing high revenue fisheries.
 
 ```{r bubble_plot, eval = F,  echo = F, fig.width=9, fig.height=12, fig.cap =  ""}
 
@@ -216,21 +214,24 @@ read_csv("../Tables/mlr_result.csv") %>%
 ```
 
 
-<!-- # Discussion -->
+# Discussion
 
-<!-- The combination of the time of emergence and the revenue participation of the species could shed a light in the importance of the time of emergence in terms of management. For example, we identified that in Peru 12 species will emerge by 2038 in average, representing 92% of the country's fishing value. Moreover, our results show that Peruvean anchoveta, the second largest fishery of the world [@SOFIA] and the main fishery in Peru [@REF] have already emerged (2010), with its stock share ratio benefiting Chile (Fig. 1). -->
+We found no clear pattern in the direction of change of future SSR under a high emission climate change scenario by 2030 relative to present (Fig. 1). Previous modelling exercises predicted an overall poleward shift in species distributions towards the end of the $21^{st}$ century [@Cheung; @Poloczanska:2016kk; @ETC]. Poleward shifts in SSR can be seen in some regions of the world with relative large EEZs and few boundaries like the North East Pacific. However, even here, Alaska's EEZ is expected to loose to Canada in the south. This is likely the effect of the geographical barriers [@Cheung:2015fm; @Kleisner:2016je] as fish cannot move north due to the land mass [@Cheung:2015fm]. Contrarily, the Eastern Tropical Pacific will see an equatorial shift with EEZs from Mexico to Ecuador loosing SSR to their southern neighbors. This shift is consistent with regional modeling studies suggesting that by mid $21^{st}$ century marine species will shift between 50 and 100 km southward of Mexico's EEZ towards Peru under a high emission climate change scenario [@TayClarkeChp2]. Similarly, poleward shifts patterns are hard to identify in regions where EEZs are relatively small like the south west Atlantic. The influence of local processes such as upwelling systems [@REF; @TayClarkeChp2] and local currents [@REF; @TayClarkeChp2] could be influencing the re-distribution of marine species in these two regions. Finally, in regions where EEZs are both small and with multiple borders like the Caribbean or North East Atlantic, changes in SSR will have no unidirectional pattern but rather present a complex network of changes. Despite these regions been already highly connected by both fish adult migration [@REF] and larvae dispersal [@Ramesh:2019va], our results suggest that distributional changes will still happen influencing the SSR of local fisheries. 
 
-<!-- Form all significantly different variables, only latitudinal gradient postpone the ToE suggesting that the ToE will happen first at equatorial latitudes and later towards the poles. -->
+Our results suggest that most of the EEZs of the world and more than half of the transboundary species already emerged since the early 2000s (Fig. 2). Shifting species distribution  has been documented in several regions and for different species [@Poloczanska:2016kk]. In the early 2000s Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range reaching Californian waters in the Eastern North Pacific [@Zeidberg:2007gs]. In the North East Atlantic, the emergence of Atlantic mackerel (*Scomber scombrus*) in Icelandic waters in 2010, lead to years of unsettled international conflict between fishing nations [@Spijkers:2017ij]. The large amount of transboundary species emerging since early 2000s aligns with the time of emergence of several environmental variables (e.g. temperature, oxygen, $CO_2$) that influence the distribution of marine species [@Roggers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Mahlstein:2011fy]. It has been estimated that since the early 2000s, SST and oxygen ($O_2$) have emerged in 79% and 22.6% of the global ocean, respectively, and by 2080 SST will have emerged in 90% of the global ocean while $O_2$ will have doubled [@Rodggers:2015j]. 
+
+Regional differences in ToE are likely the result of environmental factors and the characteristics of political boundaries. The tropics are the most species-rich biome of the global ocean [@Reygondeau:2019no] and showed the larger number of emerging species, specifically between latitudes $10^o$S and $45^o$N (Fig. 3). Historical trends suggest that both tropical Atlantic and Pacific oceans have experienced the greatest levels of warming since 2006 [@IPCC:2019tn; @Roemmich:2015id]. Similarly, equatorial regions have potentially experienced some of the largest declines in $O_2$ [@IPCC:2019tn]. Consequently, species living in these habitats that cannot cope with changing oceans will have too move towards more suitable waters [@Poloczanska:2016kk]. In addition to the environmental pressure from climate change, latitudes $10^o$S and $45^o$N comprise areas with a complex system of small EEZs with many borders (e.g. The Caribbean and the South China Sea). The time and number of emerging stocks decreases as we move away from the equator and into temperate-polar biomes with only a peak related to the Baltic and North seas.
+
+The combination of the ToE and the participation of the emerged species to fishing revenue could be seen as a metric to measure the vulnerability of transboundary fisheries to climate change (Fig. 3). The mismatch between species distributional change across international jurisdictions and regulations emplaced [or lack of thereof] can contribute to future over-exploitation of transboundary species and initiate international conflict [@PalaciosAbrantesOC; @SumauilaOC; @Spijkers:2017ij]. Thus, the sooner a transboundary species emerge, the more vulnerable its fisheries will be as policy might not be prepare to respond to the change [@Pisnky2018] nor move fast enough to cope with the emerging species [@Pinsky:2012kq; @EuropeShift]. In European waters, quota is allocated following a fix historical share based on the distribution of the 1970's. However, as species change distributions, the quota system has become outdated, potentially generating economic losses to the continent. Moreover, if the species has a large participation on a country or region fisheries revenue or catch, the management complications could potentially lead to larger economic and food security impacts. Polynesia (2019) and Micronesia (2021) the regions with the earliest average time of emergence (Fig. 5) are a case of early ToE and highly important fisheries. Countries in these regions are highly dependent of pelagic-oceanic species (e.g. tunas) and reef-associated species (e.g. *Speceies*) for both food security [@Cabral:2018hc] and profits [@]. The prompt ToE of species with a high social value makes this region particularly vulnerable to the impacts of climate change to transbounudary species. 
+
+<!-- Furthermore, as we continue to enter the $21^{st}$ century, commercial marine species are expected to continue shifting (mostly poleward) potentilly compromising shared stocks management. By the end of the century, all EEZs of the world are proyected to have at least one new transboundary species with some of them having over 10 new stocks [@Pinsky]. Consequently, as species occupy new waters they leave historic areas and so, xx% of species are expected to exit EEZs by the end of che century [@Oremus]. This entering and exicting national jurisdicions will complicate fisheries management potentially creating confllict between neighboring nations [@Pinksy @Oremus:2020id]. --> 
+
+# Caveats
 
 
 
-<!-- Historically, environmentally-driven shits in shared stocks have cause problems and threaten stock's sustainability. **In early 1980's Canada and the US blablabla.** Many fish stocks managed by the European Union ICES regultaroy areas have been shifting since the 1970's [@EuropeShift]. Such shifts have already result in confrontations between nations as evidenced by the expansion of the Atlantic mackerel (*Scomber scombrus*) distribution reaching the EEZ of Iceland [@Spijkers:2017ij].  More recently, Chile and Peru have declare a cooperation strategy to mange the transboundary stock of Peruvean Anchovera [@Peru]. Furthermore, as we continue to enter the $21^{st}$ century, commercial marine species are expected to continue shifting (mostly poleward) potentilly compromising shared stocks management. By the end of the century, all EEZs of the world are proyected to have at least one new transboundary species with some of them having over 10 new stocks [@Pinsky]. Consequently, as species occupy new waters they leave historic areas and so, xx% of species are expected to exit EEZs by the end of che century [@Oremus]. This entering and exicting national jurisdicions will complicate fisheries management potentially creating confllict between neighboring nations [@Pinksy @Oremus:2020id]. -->
 
 
 <!-- Conclusion -->
 
 <!-- Preparing policy to species on the move is key to achieve sustainable development goals and proper governance of the world fisheries [@Pinksy]. -->
-
-# Recycling text
-
-Ignoring anthropocentric effects, a species biomass distribution follows a variation in time and space according to environmental preferences, species interactions and landscape features [@Huch]. Thus, a neighboring nation will not necessarily have, at all times  (e.g. months or years), a fixed SSR but rather a series of SSRs [@GoMA]. 
