--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -49,7 +49,7 @@ In the early 1980's the United Nations officialized the concept of Exclusive Eco
 
 The management, and thus sustainability, of fisheries that target shared stocks is jeopardized as marine species shift their known distribution to cope with a changing world [@Pinsky:2018cb]. There is evidence that such shifts have already complicated shared marine resources around the globe. In the North-eastern Atlantic, evidence shows that shared stocks managed within the European Union divisions have been shifting since the 1970's compromising the region's sustainability [@EuropeShift]. In the North-eastern Pacific, sockeye salmon (*Oncorhynchus nerka*) shifted in the 1980's towards Alaska, creating a ten years conflict between Canada and the United States [@Song]. Further south, the southern stock of Peruvean anchoveta (*Engraulis ringens*) shared by Chile and Peru has gradually shifted towards Chilean waters adding to the over-exploitation of the resource [@Cashion:2018cg]. Global shifts in the distribution of tunas [@ErauskinExtramiana:2019fw] have brought additional management challenges in both the Western Indian ocean and South-western Pacific [@Miller:2007kx]. Moreover, as species continue shifting with climate change, current policies might become obsolete, and thus, require new management strategies that create equitable systems across all dependent fishing nations [@Bell:2013ga; @Pinsky:2018cb]. The objective of the current paper is to explore two concepts that will be essential in addressing the challenges that climate change will bring to the management of transboundary fisheries [@Link:2010ei].
 
-The first concept alludes to the game theory concept of thread point, known as the minimum payoff a player is willing to receive in order to cooperate with others. If a player's future payoff drops below the thread point, such player will likely break off any collaboration agreement and proceed to act solo [@Sumaila:E&S]. A thread point can be translated to the proportion of a species distribution that each neighboring nation has (or the quota allocation that each one gets) at the time of signing off an agreement [@PalaciosAbrantes:E&S]. Many shared fisheries operate this way [@EuropeShift; @GoMA; @NOAA]. If not addressed, future changes in the thread point (hereafter called Stock Share Ratio -SSR) of jointly managed fisheries can have adverse consequences for shared fisheries [@PalaciosAbrantes:E&S; @Sumaila:E&S]. The second concept refers to the Time of Emergence (ToE), defined as the moment when a future trend of a particular variable exceeds the historical variability [@IPCC:2019to]. Such concept has been used to look at the emergence of diverse oceanic variables [@Roggers:2015jq; @Keller:2014jv; @Frolicher:2016dg] and ecological consequences of marine heatwaves [@Cheung:2020ja]. Similarly, climate change is expected to drive species further away from their historic range limits [@Alexa?]. Assessing the ToE of shared stocks is as important as the change itself, as it could reduce potential international conflicts [@Spijkers:2017ij] and aid the strengthen of marine governance [@Pinsky:2018cb;  @Pinsky:2014by; @Link:2010ei].
+The first concept alludes to the game theory concept of thread point, known as the minimum payoff a player is willing to receive in order to cooperate with others. If a player's future payoff drops below the thread point, such player will likely break off any collaboration agreement and proceed to act solo [@Sumaila:E&S]. A thread point can be translated to the proportion of a species distribution that each neighboring nation has (or the quota allocation that each one gets) at the time of signing off an agreement [@PalaciosAbrantes:E&S]. Many shared fisheries operate this way [@EuropeShift; @GoMA; @NOAA]. If not addressed, future changes in the thread point (hereafter called Stock Share Ratio -SSR) of jointly managed fisheries can have adverse consequences for shared fisheries [@PalaciosAbrantes:E&S; @Sumaila:E&S]. The second concept refers to the Time of Emergence (ToE), defined as the moment when a future trend of a particular variable exceeds the historical variability [@IPCC:2019to]. Such concept has been used to look at the emergence of diverse oceanic variables [@Roggers:2015jq; @Keller:2014jv; @Frolicher:2016dg] and ecological consequences of marine heatwaves [@Cheung:2020ja]. Similarly, climate change is expected to drive species further away from their historic range limits [@Alexa?]. Assessing the ToE of shared stocks is as important as the change itself, as it could reduce potential international conflicts [@Spijkers:2017ij] and aid the strengthen of marine governance [@Pinsky:2018cb;  @Pinsky:2014by; @Link:2010ei; @Fogarty].
 
 Here we estimate the changes in Stock Share Ratio and the Time of Emergence of 633 transboundary stocks shared by 280 EEZs of 198 coastal countries under climate change (See methods). We rely on a species distribution and Earth system model with ten ensemble members to project the distribution of the 663 selected fish stocks under a high greenhouse gas emission scenario. We treated each species in an EEZ as a single stock due to a lack of more detailed spatial data [@FishForVisa] and only considered shared species between neighboring EEZs, rather than the species’ extended distribution (e.g. we did not include the high seas). Our results suggest that virtually all EEZs will have a change in SSR by 2030 and that 87% of them already had at least one emerging species since 2006, with significant regional and environmental differences. Towards the end of the $21^{st}$ century, all of the 280 EEZs will have at least one emerging stock and all 633 stocks would have emerged at least once. Our results have direct implications for marine governance of shared marine resources under a changing world.
 
@@ -144,7 +144,7 @@ average_mid <- prop_r %>%
          )
 ```
 
-We estimated the change in SSR (larger than 1 s.d) of transboundary species shared by neighboring EEZs by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to present (1951-2005) under a high emission climate change scenario. Our results suggest that `r n_eez_per`% (n = `r n_eez`) of the world EEZs will see a change in SSR by 2030 (Fig. 1A). Most EEZs will average a change lower than 25% which is expected to slightly increase in intensity towards the  mid $21^{st}$ century (**Supplements Fig 1 (histogram)**). However, this result masks larger changes in SSR for specific species. For example, Guatemala's SSR of *Panulirus gracilis* shared with Mexico is projected to go from 12% to 26%. By early $21^{st}$ century, the percentage of transboundary stocks per EEZ that will see a change in SSR >< 1 s.d. of historical distribution will be relatively large (global mean of 69% of species in an EEZ). For 17 EEZs, 100% of their analyzed transboundary stocks will shift, while and only six EEZs will have less than 25% shifting stocks (Fig. 1A-Polygons). Regions where EEZs are relatively small and have multiple borders (e.g. The Caribbean) will see a complex dynamic of changes in SSR with no clear patterns (Fig. 1B). Towards the mid $21^{st}$ century, changes in SSR per EEZ will no be substantial (**Supplements Fig 1 (map)**) relative to the early $21^{st}$ century but are expected to increase in intensity (**Supplements Fig 1 (histogram)**).
+We estimated the change in SSR (with a 63% of confidence) of transboundary species shared by neighboring EEZs by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to present (1951-2005) under a high emission climate change scenario. Our results suggest that `r n_eez_per`% (n = `r n_eez`) of the world EEZs will see a change in SSR by 2030 (Fig. 1A). Most EEZs will average a change lower than 25% which is expected to slightly increase in intensity towards the  mid $21^{st}$ century (**Supplements Fig 1 (histogram)**). However, this result masks larger changes in SSR for specific species. For example, Guatemala's SSR of *Panulirus gracilis* shared with Mexico is projected to go from 12% to 26%. By early $21^{st}$ century, the percentage of transboundary stocks per EEZ that will see a change in SSR >< 1 s.d. of historical distribution will be relatively large (global mean of 69% of species in an EEZ). For 17 EEZs, 100% of their analyzed transboundary stocks will shift, while and only six EEZs will have less than 25% shifting stocks (Fig. 1A-Polygons). Regions where EEZs are relatively small and have multiple borders (e.g. The Caribbean) will see a complex dynamic of changes in SSR with no clear patterns (Fig. 1B). Towards the mid $21^{st}$ century, changes in SSR per EEZ will no be substantial (**Supplements Fig 1 (map)**) relative to the early $21^{st}$ century but are expected to increase in intensity (**Supplements Fig 1 (histogram)**).
 
 
 ```{r SSR_gain_map, eval = F,  echo = F, fig.width=9, fig.height=12, fig.cap =  "Average gain of transboundary stock share ratio (lines) and number of shifting stocks (polygon) by 2030 (2021-2040) relative to 1951-2005. Arrows go from the losing EEZ (point) to the winner (arrowhead). Pannel B zooms in to specific areas"}
@@ -216,17 +216,31 @@ read_csv("../Tables/mlr_result.csv") %>%
 
 # Discussion
 
-We found no clear pattern in the direction of change of future SSR under a high emission climate change scenario by 2030 relative to present (Fig. 1). Previous modelling exercises predicted an overall poleward shift in species distributions towards the end of the $21^{st}$ century [@Cheung; @Poloczanska:2016kk; @ETC]. Poleward shifts in SSR can be seen in some regions of the world with relative large EEZs and few boundaries like the North East Pacific. However, even here, Alaska's EEZ is expected to loose to Canada in the south. This is likely the effect of the geographical barriers [@Cheung:2015fm; @Kleisner:2016je] as fish cannot move north due to the land mass [@Cheung:2015fm]. Contrarily, the Eastern Tropical Pacific will see an equatorial shift with EEZs from Mexico to Ecuador loosing SSR to their southern neighbors. This shift is consistent with regional modeling studies suggesting that by mid $21^{st}$ century marine species will shift between 50 and 100 km southward of Mexico's EEZ towards Peru under a high emission climate change scenario [@TayClarkeChp2]. Similarly, poleward shifts patterns are hard to identify in regions where EEZs are relatively small like the south west Atlantic. The influence of local processes such as upwelling systems [@REF; @TayClarkeChp2] and local currents [@REF; @TayClarkeChp2] could be influencing the re-distribution of marine species in these two regions. Finally, in regions where EEZs are both small and with multiple borders like the Caribbean or North East Atlantic, changes in SSR will have no unidirectional pattern but rather present a complex network of changes. Despite these regions been already highly connected by both fish adult migration [@REF] and larvae dispersal [@Ramesh:2019va], our results suggest that distributional changes will still happen influencing the SSR of local fisheries. 
+In this paper we endeavour to look at the changes in the sharing proportion of transboundary stocks and identify the year by witch future stocks' distribution whill emerge from historical variabillity. Our findings here are noteworthy in several ways. First, we identified that the historical share proportion of transboundary stocks will change by as soon as 2030 in most neighbouring EEZs (Fig. 1). Second, we show that the current distribution of most transboundary stocks have already emerged from the historical record and that virtually all EEZs have seen at least one emerging stock since 2006 (Fig. 2). Thirdly, we identify regional patterns of complex changes in SSR and potentially high vulnerabillity for transbounudary fisheries management under climate change. 
 
-Our results suggest that most of the EEZs of the world and more than half of the transboundary species already emerged since the early 2000s (Fig. 2). Shifting species distribution  has been documented in several regions and for different species [@Poloczanska:2016kk]. In the early 2000s Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range reaching Californian waters in the Eastern North Pacific [@Zeidberg:2007gs]. In the North East Atlantic, the emergence of Atlantic mackerel (*Scomber scombrus*) in Icelandic waters in 2010, lead to years of unsettled international conflict between fishing nations [@Spijkers:2017ij]. The large amount of transboundary species emerging since early 2000s aligns with the time of emergence of several environmental variables (e.g. temperature, oxygen, $CO_2$) that influence the distribution of marine species [@Roggers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Mahlstein:2011fy]. It has been estimated that since the early 2000s, SST and oxygen ($O_2$) have emerged in 79% and 22.6% of the global ocean, respectively, and by 2080 SST will have emerged in 90% of the global ocean while $O_2$ will have doubled [@Rodggers:2015j]. 
+By 2030, changes in SSR will be seen across the globe, but with no clear pattern in the direction of change (Fig. 1). Poleward shifts in SSR will be seen in regions of the world with relative large EEZs and few boundaries like the North East Pacific. However, despite a general recognition that climate change is shifting species distributions poleward [@Cheung; @Poloczanska:2016kk; @IPCC], the Eastern Tropical Pacific will see an equatorial shift. Here, the EEZs from Mexico to Ecuador will loose SSR to their southern neighbors. This shift is consistent with regional modeling studies suggesting that by mid $21^{st}$ century marine species will displace between 50 and 100 km southward of Mexico's EEZ towards Peru under a high emission climate change scenario [@TayClarkeChp2]. Moreover, regions with presence of multiple frontiers like the Caribbean and the North East Atlantic will see a complex network of SSR change with no marked direction. These regions are known for beign highly connected by both fish adult migration [@REF] and larvae dispersal [@Ramesh:2019va] leading to joint management plans [@EUFisheries] and the call for new implemented shared policies [@McNananman]. However, game theory suggest that the more number of parties negotiating, the harder it is for parties to reach an agreement [@Sumaila:2013], thus, making it particularly challenging for countries in these regions to coordinate the management of shifting shared stocks.
 
-Regional differences in ToE are likely the result of environmental factors and the characteristics of political boundaries. The tropics are the most species-rich biome of the global ocean [@Reygondeau:2019no] and showed the larger number of emerging species, specifically between latitudes $10^o$S and $45^o$N (Fig. 3). Historical trends suggest that both tropical Atlantic and Pacific oceans have experienced the greatest levels of warming since 2006 [@IPCC:2019tn; @Roemmich:2015id]. Similarly, equatorial regions have potentially experienced some of the largest declines in $O_2$ [@IPCC:2019tn]. Consequently, species living in these habitats that cannot cope with changing oceans will have too move towards more suitable waters [@Poloczanska:2016kk]. In addition to the environmental pressure from climate change, latitudes $10^o$S and $45^o$N comprise areas with a complex system of small EEZs with many borders (e.g. The Caribbean and the South China Sea). The time and number of emerging stocks decreases as we move away from the equator and into temperate-polar biomes with only a peak related to the Baltic and North seas.
+We set out to evaluate the emergence characteristics of transboundary stocks across the global EEZs. Our results suggest that most of the EEZs of the world and more than half of the transboundary species already emerged since the early 2000s (Fig. 2). This is in alignment with previous research showing that the change in the composition of marine catches since 1970's is an evidence that climate change is already acting uppont marine fishes [@Cheung:2013gk]. Indeed an expansion in the distribution of multiple marine species has been documented in several regions of the world [@Poloczanska:2016kk]. For example, in the early 2000s Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range reaching Californian and latter Washington waters in the Eastern North Pacific [@Zeidberg:2007gs] where a new fishery rapidly developed [@Pinsky:2014by]. In the North East Atlantic, the emergence of Atlantic mackerel (*Scomber scombrus*) in Icelandic waters in 2010, lead to years of unsettled international conflict between fishing nations [@Spijkers:2017ij]. The large amount of transboundary species emerging since early 2000s identified in this study can be partially attributed to the time of emergence of several environmental variables (e.g. temperature, oxygen, $CO_2$) that influence the distribution of marine species [@Roggers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Mahlstein:2011fy]. It has been estimated that since the early 2000s, SST and oxygen ($O_2$) have emerged in 79% and 22.6% of the global ocean, respectively, and by 2080 SST will have emerged in 90% of the global ocean while $O_2$ will have doubled [@Rodggers:2015j].
+
+Regional differences in ToE are likely the result of environmental factors, species vulnerabillity, and the characteristics of political boundaries. The tropics are the most species-rich biome of the global ocean [@Reygondeau:2019no] presenting a larger number of emerging species, specifically between latitudes $10^o$S and $25^o$N (Fig. 3). Equatorial regions have potentially experienced some of the largest declines in $O_2$ [@IPCC:2019tn] and historical trends suggest that both tropical Atlantic and Pacific oceans have experienced the greatest levels of warming since 2006 [@IPCC:2019tn; @Roemmich:2015id]. Here, marine species live close to the limits of their termal tolerance, making them highly vulnerable to warming waters [@IPCC] and consequently having to move towards deeper or sub-tropical colder waters [@Poloczanska:2016kk]. Thus, the high number of stocks emerging in the tropcis (e.g. between latitudes $10^o$S and $45^o$N) could be a consequence of tropical species expaning their distributions towards sup-tropical waters. This is supported by observational evidence showing that the majority of fish first sightings (e.g. the first time a fish was recorder outside its known distribution) were tropical and subtropical species in suptropical biomes [@Fogarty:2017eo]. Similarly, catch-data analysis suggests a reduction in subtropical species cathes in tropical waters between 1970 and 2006 evidencing a polweard shift in subtropical species [@Cheung:2013gk]. Moreover, the earlier emergece of tropical regions (e.g. Fig. 5 - Micronesia, Polynesia and South America and the Caribbean) supports the premise that such effect could be alredy happening [@Fogarty:2017eo; @Cheung:2013gk]. In addition to species natural traits and the environmental pressure from climate change, latitudes $10^o$S and $45^o$N comprise areas with a complex system of relative small EEZs with many borders that match peaks of emerging stocks. Specifically, it seems like South East Asia, The Caribbean, and the Mediterranean are responsable for substantial increases in emerging stocks (Fig. 3). The time and number of emerging stocks decreases as we move away from the equator and into temperate biomes where species live further away from their temperature tolerance and thus hare less vulnerable to warming [@IPCC] with a smaller peak aligned with the EEZ of the Baltic and North seas.
+
+
+## Vulnerabillity index-nonIndex
 
 The combination of the ToE and the participation of the emerged species to fishing revenue could be seen as a metric to measure the vulnerability of transboundary fisheries to climate change (Fig. 3). The mismatch between species distributional change across international jurisdictions and regulations emplaced [or lack of thereof] can contribute to future over-exploitation of transboundary species and initiate international conflict [@PalaciosAbrantesOC; @SumauilaOC; @Spijkers:2017ij]. Thus, the sooner a transboundary species emerge, the more vulnerable its fisheries will be as policy might not be prepare to respond to the change [@Pisnky2018] nor move fast enough to cope with the emerging species [@Pinsky:2012kq; @EuropeShift]. In European waters, quota is allocated following a fix historical share based on the distribution of the 1970's. However, as species change distributions, the quota system has become outdated, potentially generating economic losses to the continent. Moreover, if the species has a large participation on a country or region fisheries revenue or catch, the management complications could potentially lead to larger economic and food security impacts. Polynesia (2019) and Micronesia (2021) the regions with the earliest average time of emergence (Fig. 5) are a case of early ToE and highly important fisheries. Countries in these regions are highly dependent of pelagic-oceanic species (e.g. tunas) and reef-associated species (e.g. *Speceies*) for both food security [@Cabral:2018hc] and profits [@]. The prompt ToE of species with a high social value makes this region particularly vulnerable to the impacts of climate change to transbounudary species. 
 
-<!-- Furthermore, as we continue to enter the $21^{st}$ century, commercial marine species are expected to continue shifting (mostly poleward) potentilly compromising shared stocks management. By the end of the century, all EEZs of the world are proyected to have at least one new transboundary species with some of them having over 10 new stocks [@Pinsky]. Consequently, as species occupy new waters they leave historic areas and so, xx% of species are expected to exit EEZs by the end of che century [@Oremus]. This entering and exicting national jurisdicions will complicate fisheries management potentially creating confllict between neighboring nations [@Pinksy @Oremus:2020id]. --> 
+## Implications for management 
+
+
+The early detection of fish moving to new regions is key for fisheries management [@Fogarty]
+
+
+## Potential solutions
+
 
 # Caveats
+
+
 
 
 
